...

struct MainTabView: View {
    var body: some View {
        TabView {
            TripListView()
                .tabItem {
                    Label("Trips", systemImage: "airplane")
                }
            
            TravellerListView()
                .tabItem {
                    Label("Travellers", systemImage: "person.2.fill")
                }
...
