...
                            .font(.largeTitle)
                            .foregroundColor(.red)
                            .offset(y: -20)
                    }
                }
            }
            .navigationTitle("Select Location")
            .navigationBarTitleDisplayMode(.inline)
            .onDisappear {
                searchTask?.cancel()
            }
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
...
